# pdf-annotations

./: .gitmodules  Pipfile  README.md  extract.py  extract.sh  md2sb.py  pyproject.toml
src/annots/: annots.py
