[tool.poetry]
name = "pdf-annotations"
version = "0.1.0"
description = ""
authors = ["Yoichi Amano <amano.yoichi@gmail.com>"]
readme = "README.md"
packages = [{include = "annots", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pdfannots = "^0.4"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"

[tool.poetry.scripts]
annots = "annots.annots:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
